tests/compile_errors/018-invalid-float-literal.buzz
| '_' must be between digits
test "invalid literals" {
   int a = 100.2_;
}
